GCP + ETL MageAI + Looker Dashboard

--- a/notebooks/nyctaxi-data-modeling.ipynb
+++ b/notebooks/nyctaxi-data-modeling.ipynb
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Downloading data directly from Google Storage using Google API\n",
+    "\n",
+    "# import requests\n",
+    "# import io\n",
+    "\n",
+    "# def load_data_from_api(*args, **kwargs):\n",
+    "\n",
+    "#     url = 'https://storage.googleapis.com/nyctaxi-etl/nyctaxi_data.csv'\n",
+    "#     response = requests.get(url)\n",
+    "\n",
+    "#     return pd.read_csv(io.StringIO(response.text), sep=',')\n",
+    "\n",
+    "# df = load_data_from_api()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +285,7 @@
        "4                    0.3        113.80  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +305,7 @@
        "(100000, 19)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -340,12 +361,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, we need to convert the data type of `tpep_pickup_datetime` and `tpep_dropoff_datetime`from **object** to **datetime**"
+    "First, we need to convert the data type of `tpep_pickup_datetime` and `tpep_dropoff_datetime` from **object** to **datetime**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,44 +376,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 100000 entries, 0 to 99999\n",
-      "Data columns (total 19 columns):\n",
-      " #   Column                 Non-Null Count   Dtype         \n",
-      "---  ------                 --------------   -----         \n",
-      " 0   VendorID               100000 non-null  int64         \n",
-      " 1   tpep_pickup_datetime   100000 non-null  datetime64[ns]\n",
-      " 2   tpep_dropoff_datetime  100000 non-null  datetime64[ns]\n",
-      " 3   passenger_count        100000 non-null  int64         \n",
-      " 4   trip_distance          100000 non-null  float64       \n",
-      " 5   pickup_longitude       100000 non-null  float64       \n",
-      " 6   pickup_latitude        100000 non-null  float64       \n",
-      " 7   RatecodeID             100000 non-null  int64         \n",
-      " 8   store_and_fwd_flag     100000 non-null  object        \n",
-      " 9   dropoff_longitude      100000 non-null  float64       \n",
-      " 10  dropoff_latitude       100000 non-null  float64       \n",
-      " 11  payment_type           100000 non-null  int64         \n",
-      " 12  fare_amount            100000 non-null  float64       \n",
-      " 13  extra                  100000 non-null  float64       \n",
-      " 14  mta_tax                100000 non-null  float64       \n",
-      " 15  tip_amount             100000 non-null  float64       \n",
-      " 16  tolls_amount           100000 non-null  float64       \n",
-      " 17  improvement_surcharge  100000 non-null  float64       \n",
-      " 18  total_amount           100000 non-null  float64       \n",
-      "dtypes: datetime64[ns](2), float64(12), int64(4), object(1)\n",
-      "memory usage: 14.5+ MB\n"
+      "datetime64[ns]\n",
+      "datetime64[ns]\n"
      ]
     }
    ],
    "source": [
-    "df.info()"
+    "print(df['tpep_pickup_datetime'].dtypes)\n",
+    "print(df['tpep_dropoff_datetime'].dtypes)"
    ]
   },
   {
@@ -405,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -415,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +616,7 @@
        "4                    0.3        113.80        4  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +627,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -638,7 +636,7 @@
        "(100000, 20)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,7 +650,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 📄 Now let's create our dimensions tables"
+    "#### 📄 Creating Dimensions Tables"
    ]
   },
   {
@@ -665,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -674,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +778,7 @@
        "[100000 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -799,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -818,7 +816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -965,7 +963,7 @@
        "4              3          2016                1  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +985,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1052,7 @@
        "4                   4                5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1077,7 +1075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1142,7 @@
        "4                 4          30.43"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1170,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1243,7 +1241,7 @@
        "4             4           3         Newark"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1276,7 +1274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1349,7 +1347,7 @@
        "4                   4        40.792183        -73.971741"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1372,7 +1370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1445,7 +1443,7 @@
        "4                    4         40.695053         -74.177170"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1543,7 +1541,7 @@
        "4                4             1       Credit card"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1576,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1595,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -1773,13 +1771,36 @@
        "4                    0.3        113.80  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "fact_table.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 🔨 ETL Architecture Using Google Cloud and Mage\n",
+    "\n",
+    "![ETL](../etl-architecture.jpg)\n",
+    "\n",
+    "### 🔧 ETL Process in Mage\n",
+    "\n",
+    "![ETL-Mage](../nyctaxi-mage-etl.png)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### [📊 See NYC Taxi Trip Records Looker Studio Dashboard](https://lookerstudio.google.com/reporting/b8f8cf96-51a8-4987-9690-b26a063bf3e6)\n",
+    "\n"
    ]
   }
  ],
